backup/prometheus-stack/alertmanager-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - alertmanager.hoytlabs.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
