backup/prometheus-stack/prometheus-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - prometheus.hoytlabs.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 1
